--- a/QoColours/schemesDark.tex
+++ b/QoColours/schemesDark.tex
@@ -1,7 +1,8 @@
 \input{preamble}
-\usepackage[scheme=office_2007_2010, dark]{./qocolours}
+\usepackage[scheme=twilight, dark]{./qocolours}
 
 \begin{document}
+
 \begin{multicols}{2}
     \pagenumbering{roman}
     \tableofcontents
@@ -125,6 +126,9 @@
 \newpage
 \subsection{\ttfamily office\_2011}
 \ColourChart{office_2011}
+\newpage
+\subsection{\ttfamily office\_2020}
+\ColourChart{office_2020}
 \newpage
 \subsection{\ttfamily office\_default}
 \ColourChart{office_default}
