--- a/QoColours/schemesLight.tex
+++ b/QoColours/schemesLight.tex
@@ -1,5 +1,5 @@
 \input{preamble}
-\usepackage[scheme=office_2007_2010, light]{./qocolours}
+\usepackage[scheme=twilight, light]{./qocolours}
 
 \begin{document}
 
@@ -126,6 +126,9 @@
 \newpage
 \subsection{\ttfamily office\_2011}
 \ColourChart{office_2011}
+\newpage
+\subsection{\ttfamily office\_2020}
+\ColourChart{office_2020}
 \newpage
 \subsection{\ttfamily office\_default}
 \ColourChart{office_default}
