Added 150 themes from slidehelper.com, and added 4 new optional boolean arguments (microsoft, iterm, slidehelper, all) determining which sets of schemes to load to minimise overhead when loading the package. Default behaviour is now to only load the twilight theme.

--- a/QoColours/schemesLight.tex
+++ b/QoColours/schemesLight.tex
@@ -1,5 +1,5 @@
 \input{preamble}
-\usepackage[scheme=twilight, light]{./qocolours}
+\usepackage[scheme=twilight, light, all]{./qocolours}
 
 \begin{document}
 
@@ -966,10 +966,464 @@
 \ColourChart{zenburn}
 \newpage
 
+\section{Slidehelper}
+
+\newpage
+\subsection{\texttt{slidehelper001}}
+\ColourChart{slidehelper001}
+\newpage
+\subsection{\texttt{slidehelper002}}
+\ColourChart{slidehelper002}
+\newpage
+\subsection{\texttt{slidehelper003}}
+\ColourChart{slidehelper003}
+\newpage
+\subsection{\texttt{slidehelper004}}
+\ColourChart{slidehelper004}
+\newpage
+\subsection{\texttt{slidehelper005}}
+\ColourChart{slidehelper005}
+\newpage
+\subsection{\texttt{slidehelper006}}
+\ColourChart{slidehelper006}
+\newpage
+\subsection{\texttt{slidehelper007}}
+\ColourChart{slidehelper007}
+\newpage
+\subsection{\texttt{slidehelper008}}
+\ColourChart{slidehelper008}
+\newpage
+\subsection{\texttt{slidehelper009}}
+\ColourChart{slidehelper009}
+\newpage
+\subsection{\texttt{slidehelper010}}
+\ColourChart{slidehelper010}
+\newpage
+\subsection{\texttt{slidehelper011}}
+\ColourChart{slidehelper011}
+\newpage
+\subsection{\texttt{slidehelper012}}
+\ColourChart{slidehelper012}
+\newpage
+\subsection{\texttt{slidehelper013}}
+\ColourChart{slidehelper013}
+\newpage
+\subsection{\texttt{slidehelper014}}
+\ColourChart{slidehelper014}
+\newpage
+\subsection{\texttt{slidehelper015}}
+\ColourChart{slidehelper015}
+\newpage
+\subsection{\texttt{slidehelper016}}
+\ColourChart{slidehelper016}
+\newpage
+\subsection{\texttt{slidehelper017}}
+\ColourChart{slidehelper017}
+\newpage
+\subsection{\texttt{slidehelper018}}
+\ColourChart{slidehelper018}
+\newpage
+\subsection{\texttt{slidehelper019}}
+\ColourChart{slidehelper019}
+\newpage
+\subsection{\texttt{slidehelper020}}
+\ColourChart{slidehelper020}
+\newpage
+\subsection{\texttt{slidehelper021}}
+\ColourChart{slidehelper021}
+\newpage
+\subsection{\texttt{slidehelper022}}
+\ColourChart{slidehelper022}
+\newpage
+\subsection{\texttt{slidehelper023}}
+\ColourChart{slidehelper023}
+\newpage
+\subsection{\texttt{slidehelper024}}
+\ColourChart{slidehelper024}
+\newpage
+\subsection{\texttt{slidehelper025}}
+\ColourChart{slidehelper025}
+\newpage
+\subsection{\texttt{slidehelper026}}
+\ColourChart{slidehelper026}
+\newpage
+\subsection{\texttt{slidehelper027}}
+\ColourChart{slidehelper027}
+\newpage
+\subsection{\texttt{slidehelper028}}
+\ColourChart{slidehelper028}
+\newpage
+\subsection{\texttt{slidehelper029}}
+\ColourChart{slidehelper029}
+\newpage
+\subsection{\texttt{slidehelper030}}
+\ColourChart{slidehelper030}
+\newpage
+\subsection{\texttt{slidehelper031}}
+\ColourChart{slidehelper031}
+\newpage
+\subsection{\texttt{slidehelper032}}
+\ColourChart{slidehelper032}
+\newpage
+\subsection{\texttt{slidehelper033}}
+\ColourChart{slidehelper033}
+\newpage
+\subsection{\texttt{slidehelper034}}
+\ColourChart{slidehelper034}
+\newpage
+\subsection{\texttt{slidehelper035}}
+\ColourChart{slidehelper035}
+\newpage
+\subsection{\texttt{slidehelper036}}
+\ColourChart{slidehelper036}
+\newpage
+\subsection{\texttt{slidehelper037}}
+\ColourChart{slidehelper037}
+\newpage
+\subsection{\texttt{slidehelper038}}
+\ColourChart{slidehelper038}
+\newpage
+\subsection{\texttt{slidehelper039}}
+\ColourChart{slidehelper039}
+\newpage
+\subsection{\texttt{slidehelper040}}
+\ColourChart{slidehelper040}
+\newpage
+\subsection{\texttt{slidehelper041}}
+\ColourChart{slidehelper041}
+\newpage
+\subsection{\texttt{slidehelper042}}
+\ColourChart{slidehelper042}
+\newpage
+\subsection{\texttt{slidehelper043}}
+\ColourChart{slidehelper043}
+\newpage
+\subsection{\texttt{slidehelper044}}
+\ColourChart{slidehelper044}
+\newpage
+\subsection{\texttt{slidehelper045}}
+\ColourChart{slidehelper045}
+\newpage
+\subsection{\texttt{slidehelper046}}
+\ColourChart{slidehelper046}
+\newpage
+\subsection{\texttt{slidehelper047}}
+\ColourChart{slidehelper047}
+\newpage
+\subsection{\texttt{slidehelper048}}
+\ColourChart{slidehelper048}
+\newpage
+\subsection{\texttt{slidehelper049}}
+\ColourChart{slidehelper049}
+\newpage
+\subsection{\texttt{slidehelper050}}
+\ColourChart{slidehelper050}
+\newpage
+\subsection{\texttt{slidehelper051}}
+\ColourChart{slidehelper051}
+\newpage
+\subsection{\texttt{slidehelper052}}
+\ColourChart{slidehelper052}
+\newpage
+\subsection{\texttt{slidehelper053}}
+\ColourChart{slidehelper053}
+\newpage
+\subsection{\texttt{slidehelper054}}
+\ColourChart{slidehelper054}
+\newpage
+\subsection{\texttt{slidehelper055}}
+\ColourChart{slidehelper055}
+\newpage
+\subsection{\texttt{slidehelper056}}
+\ColourChart{slidehelper056}
+\newpage
+\subsection{\texttt{slidehelper057}}
+\ColourChart{slidehelper057}
+\newpage
+\subsection{\texttt{slidehelper058}}
+\ColourChart{slidehelper058}
+\newpage
+\subsection{\texttt{slidehelper059}}
+\ColourChart{slidehelper059}
+\newpage
+\subsection{\texttt{slidehelper060}}
+\ColourChart{slidehelper060}
+\newpage
+\subsection{\texttt{slidehelper061}}
+\ColourChart{slidehelper061}
+\newpage
+\subsection{\texttt{slidehelper062}}
+\ColourChart{slidehelper062}
+\newpage
+\subsection{\texttt{slidehelper063}}
+\ColourChart{slidehelper063}
+\newpage
+\subsection{\texttt{slidehelper064}}
+\ColourChart{slidehelper064}
+\newpage
+\subsection{\texttt{slidehelper065}}
+\ColourChart{slidehelper065}
+\newpage
+\subsection{\texttt{slidehelper066}}
+\ColourChart{slidehelper066}
+\newpage
+\subsection{\texttt{slidehelper067}}
+\ColourChart{slidehelper067}
+\newpage
+\subsection{\texttt{slidehelper068}}
+\ColourChart{slidehelper068}
+\newpage
+\subsection{\texttt{slidehelper069}}
+\ColourChart{slidehelper069}
+\newpage
+\subsection{\texttt{slidehelper070}}
+\ColourChart{slidehelper070}
+\newpage
+\subsection{\texttt{slidehelper071}}
+\ColourChart{slidehelper071}
+\newpage
+\subsection{\texttt{slidehelper072}}
+\ColourChart{slidehelper072}
+\newpage
+\subsection{\texttt{slidehelper073}}
+\ColourChart{slidehelper073}
+\newpage
+\subsection{\texttt{slidehelper074}}
+\ColourChart{slidehelper074}
+\newpage
+\subsection{\texttt{slidehelper075}}
+\ColourChart{slidehelper075}
+\newpage
+\subsection{\texttt{slidehelper076}}
+\ColourChart{slidehelper076}
+\newpage
+\subsection{\texttt{slidehelper077}}
+\ColourChart{slidehelper077}
+\newpage
+\subsection{\texttt{slidehelper078}}
+\ColourChart{slidehelper078}
+\newpage
+\subsection{\texttt{slidehelper079}}
+\ColourChart{slidehelper079}
+\newpage
+\subsection{\texttt{slidehelper080}}
+\ColourChart{slidehelper080}
+\newpage
+\subsection{\texttt{slidehelper081}}
+\ColourChart{slidehelper081}
+\newpage
+\subsection{\texttt{slidehelper082}}
+\ColourChart{slidehelper082}
+\newpage
+\subsection{\texttt{slidehelper083}}
+\ColourChart{slidehelper083}
+\newpage
+\subsection{\texttt{slidehelper084}}
+\ColourChart{slidehelper084}
+\newpage
+\subsection{\texttt{slidehelper085}}
+\ColourChart{slidehelper085}
+\newpage
+\subsection{\texttt{slidehelper086}}
+\ColourChart{slidehelper086}
+\newpage
+\subsection{\texttt{slidehelper087}}
+\ColourChart{slidehelper087}
+\newpage
+\subsection{\texttt{slidehelper088}}
+\ColourChart{slidehelper088}
+\newpage
+\subsection{\texttt{slidehelper089}}
+\ColourChart{slidehelper089}
+\newpage
+\subsection{\texttt{slidehelper090}}
+\ColourChart{slidehelper090}
+\newpage
+\subsection{\texttt{slidehelper091}}
+\ColourChart{slidehelper091}
+\newpage
+\subsection{\texttt{slidehelper092}}
+\ColourChart{slidehelper092}
+\newpage
+\subsection{\texttt{slidehelper093}}
+\ColourChart{slidehelper093}
+\newpage
+\subsection{\texttt{slidehelper094}}
+\ColourChart{slidehelper094}
+\newpage
+\subsection{\texttt{slidehelper095}}
+\ColourChart{slidehelper095}
+\newpage
+\subsection{\texttt{slidehelper096}}
+\ColourChart{slidehelper096}
+\newpage
+\subsection{\texttt{slidehelper097}}
+\ColourChart{slidehelper097}
+\newpage
+\subsection{\texttt{slidehelper098}}
+\ColourChart{slidehelper098}
+\newpage
+\subsection{\texttt{slidehelper099}}
+\ColourChart{slidehelper099}
+\newpage
+\subsection{\texttt{slidehelper100}}
+\ColourChart{slidehelper100}
+\newpage
+\subsection{\texttt{slidehelper101}}
+\ColourChart{slidehelper101}
+\newpage
+\subsection{\texttt{slidehelper102}}
+\ColourChart{slidehelper102}
+\newpage
+\subsection{\texttt{slidehelper103}}
+\ColourChart{slidehelper103}
+\newpage
+\subsection{\texttt{slidehelper104}}
+\ColourChart{slidehelper104}
+\newpage
+\subsection{\texttt{slidehelper105}}
+\ColourChart{slidehelper105}
+\newpage
+\subsection{\texttt{slidehelper106}}
+\ColourChart{slidehelper106}
+\newpage
+\subsection{\texttt{slidehelper107}}
+\ColourChart{slidehelper107}
+\newpage
+\subsection{\texttt{slidehelper108}}
+\ColourChart{slidehelper108}
+\newpage
+\subsection{\texttt{slidehelper109}}
+\ColourChart{slidehelper109}
+\newpage
+\subsection{\texttt{slidehelper110}}
+\ColourChart{slidehelper110}
+\newpage
+\subsection{\texttt{slidehelper111}}
+\ColourChart{slidehelper111}
+\newpage
+\subsection{\texttt{slidehelper112}}
+\ColourChart{slidehelper112}
+\newpage
+\subsection{\texttt{slidehelper113}}
+\ColourChart{slidehelper113}
+\newpage
+\subsection{\texttt{slidehelper114}}
+\ColourChart{slidehelper114}
+\newpage
+\subsection{\texttt{slidehelper115}}
+\ColourChart{slidehelper115}
+\newpage
+\subsection{\texttt{slidehelper116}}
+\ColourChart{slidehelper116}
+\newpage
+\subsection{\texttt{slidehelper117}}
+\ColourChart{slidehelper117}
+\newpage
+\subsection{\texttt{slidehelper118}}
+\ColourChart{slidehelper118}
+\newpage
+\subsection{\texttt{slidehelper119}}
+\ColourChart{slidehelper119}
+\newpage
+\subsection{\texttt{slidehelper120}}
+\ColourChart{slidehelper120}
+\newpage
+\subsection{\texttt{slidehelper121}}
+\ColourChart{slidehelper121}
+\newpage
+\subsection{\texttt{slidehelper122}}
+\ColourChart{slidehelper122}
+\newpage
+\subsection{\texttt{slidehelper123}}
+\ColourChart{slidehelper123}
+\newpage
+\subsection{\texttt{slidehelper124}}
+\ColourChart{slidehelper124}
+\newpage
+\subsection{\texttt{slidehelper125}}
+\ColourChart{slidehelper125}
+\newpage
+\subsection{\texttt{slidehelper126}}
+\ColourChart{slidehelper126}
+\newpage
+\subsection{\texttt{slidehelper127}}
+\ColourChart{slidehelper127}
+\newpage
+\subsection{\texttt{slidehelper128}}
+\ColourChart{slidehelper128}
+\newpage
+\subsection{\texttt{slidehelper129}}
+\ColourChart{slidehelper129}
+\newpage
+\subsection{\texttt{slidehelper130}}
+\ColourChart{slidehelper130}
+\newpage
+\subsection{\texttt{slidehelper131}}
+\ColourChart{slidehelper131}
+\newpage
+\subsection{\texttt{slidehelper132}}
+\ColourChart{slidehelper132}
+\newpage
+\subsection{\texttt{slidehelper133}}
+\ColourChart{slidehelper133}
+\newpage
+\subsection{\texttt{slidehelper134}}
+\ColourChart{slidehelper134}
+\newpage
+\subsection{\texttt{slidehelper135}}
+\ColourChart{slidehelper135}
+\newpage
+\subsection{\texttt{slidehelper136}}
+\ColourChart{slidehelper136}
+\newpage
+\subsection{\texttt{slidehelper137}}
+\ColourChart{slidehelper137}
+\newpage
+\subsection{\texttt{slidehelper138}}
+\ColourChart{slidehelper138}
+\newpage
+\subsection{\texttt{slidehelper139}}
+\ColourChart{slidehelper139}
+\newpage
+\subsection{\texttt{slidehelper140}}
+\ColourChart{slidehelper140}
+\newpage
+\subsection{\texttt{slidehelper141}}
+\ColourChart{slidehelper141}
+\newpage
+\subsection{\texttt{slidehelper142}}
+\ColourChart{slidehelper142}
+\newpage
+\subsection{\texttt{slidehelper143}}
+\ColourChart{slidehelper143}
+\newpage
+\subsection{\texttt{slidehelper144}}
+\ColourChart{slidehelper144}
+\newpage
+\subsection{\texttt{slidehelper145}}
+\ColourChart{slidehelper145}
+\newpage
+\subsection{\texttt{slidehelper146}}
+\ColourChart{slidehelper146}
+\newpage
+\subsection{\texttt{slidehelper147}}
+\ColourChart{slidehelper147}
+\newpage
+\subsection{\texttt{slidehelper148}}
+\ColourChart{slidehelper148}
+\newpage
+\subsection{\texttt{slidehelper149}}
+\ColourChart{slidehelper149}
+\newpage
+\subsection{\texttt{slidehelper150}}
+\ColourChart{slidehelper150}
+
+\newpage
+
 \section{Other}
 
 \subsection{\texttt{caduceus}}
 \ColourChart{caduceus}
-\newpage
 
 \end{document}
